--- a/index.html
+++ b/index.html
@@ -2328,13 +2328,11 @@
 </div>
 
 <!-- Main One -->
-<div class="text-right font-body tracking-widest leading-none">
-    <span id="city"></span>
-    <span id="temperature"></span><span>&#176;</span><span>C</span>
-    <span id=condition class="capitalize"></span>
+<div class="xxs:text-center xl:text-right font-body tracking-widest text-black leading-none">
+    <span id="temperature" class='p-2 lg:mr-5 rounded'></span>
 </div>
 
-<div id="main" class="flex flex-wrap xxs:pt-2 xs:pt-16 md:pt-24 xl:pt-12">
+<div id="main" class="flex flex-wrap xxs:pt-2 xs:pt-16 md:pt-24 lg:pt-16">
 	  <h1 class="flex w-full justify-center font-body xxs:tracking-widest xl:tracking-loose leading-none uppercase">&dash; Save The Date &dash;</h1>
 	  <h1 class="flex w-full justify-center font-body tracking-widest leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl xs:pt-3 lg:pt-6 animated zoomIn delay-1s">Eyram</h1>
 	  <div class="flex w-full justify-center">
@@ -2346,6 +2344,7 @@
 	  <h1 class="font-body text-center mx-auto tracking-wider leading-none text-3xl">
       <span class="xxs:hidden md:block">the FOURTEENth of DECEMBER, TWO THOUSAND and NINETEEN</span> 
       <span class="xxs:block md:hidden">14 &dot; 12 &dot; 2019</span> 
+      <span id="directions" class="hidden pt-12 xxs:text-4xl lg:text-5xl">LARTEBIOKORSHIE, BEHIND NKRUMAH FLATS, ADJACENT CAKE TEKNIKS</span> 
     </h1>
 </div>
 
