--- a/index.html
+++ b/index.html
@@ -2330,6 +2330,7 @@
 <!-- Main One -->
 <div class="xxs:text-center xl:text-right font-body tracking-widest text-black leading-none">
     <span id="temperature" class='p-2 lg:mr-5 rounded'></span>
+    <br class="bg-red-600 bg-green-600">
 </div>
 
 <div id="main" class="flex flex-wrap xxs:pt-2 xs:pt-16 md:pt-24 lg:pt-16">
