--- a/index.html
+++ b/index.html
@@ -2327,7 +2327,7 @@
   </nav>
 </div>
 
-<!-- Main One -->
+<!-- Weather Display -->
 <div class="xxs:text-center xl:text-right font-body tracking-widest text-black leading-none">
     <span id="temperature" class='p-2 lg:mr-5 rounded'></span>
     <br class="bg-red-600 bg-green-600">
