rsvp page edited

--- a/our-story.html
+++ b/our-story.html
@@ -22,8 +22,7 @@
    <title>Eyram &amp; Esi || Our Story</title>
 </head>
 
-<body class="bg-appteal font-body text-white border-double border-8 border-appgold">
-  <section class="">
+<body class="bg-appteal font-body text-white ">
   <div class="sticky top-0 z-40 ">
     <nav class="flex flex-wrap justify-between bg-appteal xxs:py-2">
       <div class="cursor-pointer xxs:ml-5">
@@ -57,16 +56,15 @@
           Eyram and Esi barely said a word to each other on the bus because Eyram was being his usual non-talkative self throughout the journey but because the Lord is good, they became very good friends after that trip. Fast forward, life got hectic and Eyram left the country for a bit and they stopped talking like they used to. <br> <br>
 
           In the wake of December 25th last year Eyram was somewhere very far away in his favourite city on earth and he received a message, it was her, Theodora Maame Esi Torto, wishing Eyram a very Merry Christmas. Eyram was in a very 
-          very bad place and that message restructured every aching muscle on my face and he smiled. They both talked about all and everything, they spoke about how much he had missed her and how she had always been the one for him. 
+          very bad place and that message restructured every aching muscle on his face and he smiled. They both talked about all and everything, they spoke about how much he had missed her and how she had always been the one for him. 
           Eyram got back to Ghana on the 30th of January, 2019 and without hesitation the first person he looked for was Esi. He popped the question, that heart wrenching question, "Will you marry me?". She hesitated, his heart skipped so many beats but she smiled and said yes. This was the beginning of a beautiful journey for both of them. 
         </p>
 
       </div>
-      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-6 lg:pt-32 xl:px-12 xl:pt-32 xl2:px-16">
+      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-12 lg:pt-56 xl:px-24 xl:pt-32 xl2:px-48">
         <img class="shadow-2xl" src="/resources/img/our-story.jpg" alt="our-story">
       </div>
     </div>
 </div>
-</section>
 </body>
 </html>
