--- a/our-story.html
+++ b/our-story.html
@@ -51,7 +51,8 @@
         <p class="leading-tight text-appgold xxs:text-sm md:text-xl xxs:px-6 xs:px-12 lg:px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
         <p class="leading-tight text-2xl">&dash;</p>
 
-        <p class="leading-tight xxs:text-xl text-2xl text-justify xxs:px-6 lg:pl-20">This story, our story began some 7 years ago today. It was a very fine sunny Saturday morning, 
+
+        <p class="leading-tight tracking-tighter xxs:text-xl text-2xl text-justify xxs:px-6 lg:pl-20"><img class="pr-3 pb-3 w-64 float-left xxs:block lg:hidden" src="/resources/img/our-story.jpg" alt="our-story">This story, our story began some 7 years ago today. It was a very fine sunny Saturday morning, 
           Eyram's charity group, BiG, were going their usual quarterly charity trip to the Volta Region. Into the bus entered this damsel, sweet and glowing; she had so much radiance, her name is Esi .
           Eyram and Esi barely said a word to each other on the bus because Eyram was being his usual non-talkative self throughout the journey but because the Lord is good, they became very good friends after that trip. Fast forward, life got hectic and Eyram left the country for a bit and they stopped talking like they used to. <br> <br>
 
