--- a/rsvp.html
+++ b/rsvp.html
@@ -11,14 +11,14 @@
 </head>
 
 <body id="rsvp" class="font-body border-double border-8 border-appgold antialiased ">
-    <div class="flex flex-wrap xxs:text-xl lg:text-3xl h-screen">
+    <div class="flex flex-wrap xxs:text-xl lg:text-3xl">
         <div class="xxs:w-full xl:w-1/2 text-white bg-appteal xxs:px-20 xxs:pt-20 xl:pt-48">
           <h1 class="text-center text-5xl tracking-loose pb-10" >RSVP</h1>
           <form class="w-full" name="rsvp" method="POST" data-netlify="true">
               <div class="flex flex-wrap">
                   <div class="w-full pb-4">
                       <label class="tracking-wide mb-2" for="grid-name">Your Full Name</label>
-                      <input class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-first-name" name="name" type="text" placeholder="" aria-label="your name" required>
+                      <input class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-name" name="name" type="text" placeholder="" aria-label="your name" required>
                   </div>
                   <div class="w-full pb-4">
                       <label class="tracking-wide mb-2" for="grid-number">Number of People Attending</label>
@@ -37,11 +37,12 @@
                       </div>
                     </div>
                   </div>
-                
-                  <div class="w-full xxs:pr-4" data-netlify-recaptcha="true">
-
+                  <div class="w-full pb-4">
+                    <label class="tracking-wide mb-2" for="grid-song">Do You Have A Song Request? Write It Here</label>
+                    <input class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-song" name="song" type="text" placeholder="" aria-label="your song">
                   </div>
-                  <button class="border border-appgold focus:outline-none shadow-2xl py-2 px-4 my-6" type="submit">
+              
+                  <button class="border border-appgold focus:outline-none shadow-2xl py-2 px-4 my-8" type="submit">
                   send
                   </button>
               </div>
@@ -49,8 +50,8 @@
         </div>
         <div class="xxs:w-full xl:w-1/2 font-black text-black text-center bg-white shadow-2xl xxs:px-20 xxs:py-10 xl:px-20 xl:pt-48">
           <a id="map" class="hidden" href="https://www.google.com/maps/place/5%C2%B032'59.0%22N+0%C2%B014'02.0%22W/@5.549712,-0.2344212,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d5.5497123!4d-0.2338741"><img class="border-4 border-appgold" src="/resources/img/location.png" alt="directions"></a>
-          <input id="code" class="xxs:mt-16 xl:mt-40 appearance-none bg-transparent border border-appgold w-full leading-tight focus:outline-none hidden" type="number" placeholder="Enter code to display map">
-          <p id="map-tag" class="xxs:mt-16 xl:mt-40 cursor-pointer">Click here to show map</p>
+          <input id="code" class="xxs:mt-16 xl:mt-56 appearance-none bg-transparent border border-appgold w-full leading-tight focus:outline-none hidden" type="number" placeholder="Enter code and enter">
+          <p id="map-tag" class="xxs:mt-16 xl:mt-56 cursor-pointer">Click here and enter code to show map</p>
         </div>
     </div>
 
