--- a/photos.html
+++ b/photos.html
@@ -52,7 +52,7 @@
 <div id="auth-status" style="display: inline; padding-left: 25px"></div><hr> -->
 
 <div id="photos" class="flex flex-wrap z-10 py-20">
-    <h1 id="bg_text" class="flex justify-center w-full tracking-loose xxs:text-3xl xs:text-4xl lg:text-10xl antialiased animated zoomIn py-56 z-0">PHOTOS</h1>
+    <h1 id="bg_text" class="flex justify-center w-full tracking-looser xxs:text-3xl xs:text-4xl lg:text-10xl antialiased animated zoomIn py-56 z-0">PHOTOS</h1>
     <div class="xxs:w-1/2 lg:w-1/4 xxs:px-3 mb-4 z-10"></div>
     <img class="w-full lg:max-w-xs cursor-pointer hover:opacity-75" src="" alt="">
 </div>
