our story updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <title>Eyram &amp; Esi</title>
 </head>
 
-<body class="bg-appteal">
+<body class="bg-appteal border-double border-8 border-appgold">
 <section id="initial" class="bg-appteal font-body text-center text-white tracking-tightest leading-tight xxs:pt-32 xs:pt-48 border-double border-8 border-appgold h-screen">  
   <div class="flex flex-wrap">
     <div class="flex w-full justify-center xxs:-mb-40 lg:-mb-56">
@@ -2305,7 +2305,7 @@
   </div>
 </section>
 
-<section id="landing" class="bg-appteal text-white border-double border-8 border-appgold h-screen hidden">
+<section id="landing" class="bg-appteal text-white  h-screen hidden">
 <!-- Navigation -->
 <div class="sticky font-body top-0 z-40 text-white">
   <nav class="flex flex-wrap justify-between xxs:py-2">
