--- a/rsvp.html
+++ b/rsvp.html
@@ -45,16 +45,15 @@
                     <label class="tracking-wide mb-2" for="grid-song">Do You Have A Song Request? Write It Here</label>
                     <input class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-song" name="song" type="text" placeholder="" aria-label="your song">
                   </div>
-              
                   <button class="border border-appgold focus:outline-none shadow-2xl py-2 px-4 my-10" type="submit">
                   send
                   </button>
               </div>
             </form>  
         </div>
-        <div class="xxs:w-full xl:w-1/2 font-black text-black text-center bg-white shadow-2xl xxs:px-20 xxs:py-10 xl:px-20 xl:pt-32">
+        <div class="xxs:w-full xl:w-1/2 font-black text-black text-center bg-white shadow-2xl xxs:px-16 xxs:py-10 xl:px-20 xl:pt-48">
           <a id="map" class="hidden" href="https://www.google.com/maps/place/5%C2%B032'59.0%22N+0%C2%B014'02.0%22W/@5.549712,-0.2344212,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d5.5497123!4d-0.2338741"><img class="border-4 border-appgold" src="/resources/img/location.png" alt="directions"></a>
-          <input id="code" class="xxs:mt-16 xl:mt-56 appearance-none bg-transparent border border-appgold w-full leading-tight focus:outline-none hidden" type="number" placeholder="Enter code and enter">
+          <input id="code" class="xxs:mt-16 xl:mt-56 xxs:ml-10 lg:ml-40 appearance-none bg-transparent border border-appgold xxs:w-3/4 lg:w-1/2 leading-tight tracking-tighter focus:outline-none hidden" type="number" placeholder="Type code and enter">
           <p id="map-tag" class="xxs:mt-16 xl:mt-56 cursor-pointer">Click here and enter code to show map</p>
         </div>
     </div>
