our story updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="bg-appteal">
-<section id="initial" class="bg-appteal font-body text-center text-white tracking-tightest leading-tight xxs:pt-32 xs:pt-48 pb-12 border-double border-8 border-appgold">  
+<section id="initial" class="bg-appteal font-body text-center text-white tracking-tightest leading-tight xxs:pt-32 xs:pt-48 pb-12 border-double border-8 border-appgold h-screen">  
   <div class="flex flex-wrap">
     <div class="flex w-full justify-center xxs:-mb-40 lg:-mb-56">
       <svg class="xxs:w-80 lg:w-128" enable-background="new 0 0 640 480" version="1.1" viewBox="0 0 640 480" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
@@ -2305,7 +2305,7 @@
   </div>
 </section>
 
-<section id="landing" class="bg-appteal text-white border-double border-8 border-appgold pb-12 h-screen hidden">
+<section id="landing" class="bg-appteal text-white border-double border-8 border-appgold pb-12 hidden">
 <!-- Navigation -->
 <div class="sticky font-body top-0 z-40 text-white">
   <nav class="flex flex-wrap justify-between xxs:py-2">
