rsvp page update

--- a/rsvp.html
+++ b/rsvp.html
@@ -39,8 +39,17 @@
                   </div>
                   <div class="w-full pb-4">
                     <label class="tracking-wide mb-2" for="grid-number">Number of People Attending</label>
-                    <input class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-number" name="number" type="number" placeholder="" aria-label="number attending" required>
-                </div>
+                    <div class="relative">
+                      <select class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-number" name="number" type="number" required>
+                        <option></option>
+                        <option>1</option>
+                        <option>2</option>
+                      </select>
+                      <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-500">
+                        <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+                      </div>
+                    </div>
+                  </div>
                   <div class="w-full pb-4">
                     <label class="tracking-wide mb-2" for="grid-song">Do You Have A Song Request? Write It Here</label>
                     <input class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none" id="grid-song" name="song" type="text" placeholder="" aria-label="your song">
