rsvp page update

--- a/index.html
+++ b/index.html
@@ -2344,7 +2344,7 @@
 	  <h1 class="flex w-full justify-center font-body tracking-widest leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl xs:pb-3 lg:pb-6 animated zoomIn delay-1s">Esi</h1>
 	  <h1 class="font-body text-center mx-auto tracking-wider leading-none text-3xl">
       <span class="xxs:hidden md:block">the FOURTEENth of DECEMBER, TWO THOUSAND and NINETEEN</span> 
-      <span class="xxs:block md:hidden">14 &dot; 12 &dot; 2019</span> 
+      <span class="xxs:block md:hidden">14 &dash; 12 &dash; 2019</span> 
       <span id="directions" class="hidden pt-12 xxs:text-3xl lg:text-4xl">LARTEBIOKORSHIE, BEHIND NKRUMAH FLATS, ADJACENT CAKE TEKNIKS</span> 
     </h1>
 </div>
