--- a/our-story.html
+++ b/our-story.html
@@ -55,7 +55,7 @@
           Eyram and Esi barely said a word to each other on the bus because Eyram was being his usual non-talkative self throughout the journey but because the Lord is good, they became very good friends after that trip. Fast forward, life got hectic and Eyram left the country for a bit and they stopped talking like they used to. <br> <br>
           In the wake of December 25th 2018, Eyram was somewhere very far away and he received a message, it was her, Theodora Maame Esi Torto, wishing Eyram a very Merry Christmas. Eyram was in a very 
           very bad place and that message restructured every aching muscle on his face and he smiled. They both talked about all and everything, they spoke about how much he had missed her and how she had always been the one for him. 
-          Eyram got back to Ghana on the 30th of January, 2019 and without hesitation the first person he looked for was Esi. He popped the question, that heart wrenching question, "Will you marry me?". She hesitated, his heart skipped so many beats but she smiled and said yes. This was the beginning of a beautiful journey for both of them. <span class="text-gray-500">-cue Bebe Rexha's "If It's Meant To Be"...</span>
+          Eyram got back to Ghana on the 30th of January, 2019 and without hesitation the first person he looked for was Esi. He popped the question, that heart wrenching question, "Will you marry me?". She hesitated, his heart skipped so many beats but she smiled and said yes. This was the beginning of a beautiful journey for both of them. <span class="text-gray-500">&dash;cue Bebe Rexha's "If It's Meant To Be"...</span>
         </p>
       </div>
       <div class="xxs:hidden lg:block lg:w-1/2 lg:px-12 lg:pt-56 xl:px-24 xl:pt-32 xl2:px-48">
