rsvp page edited

--- a/rsvp.html
+++ b/rsvp.html
@@ -23,7 +23,7 @@
         </svg>
       </a>
       <h1 class="text-center text-5xl tracking-loose pb-10">RSVP</h1>
-      <form class="w-full" name="rsvp" method="POST" data-netlify="true">
+      <form class="w-full" name="rsvp" method="POST" action="/success.html" data-netlify="true">
         <div class="flex flex-wrap">
           <div class="w-full pb-4">
             <label class="tracking-wide mb-2" for="grid-name">Your Full Name</label>
