--- a/index.html
+++ b/index.html
@@ -2600,7 +2600,7 @@
     </div>
 
     <!-- Weather Display -->
-    <div class="xxs:text-center xl:text-right font-body tracking-widest text-black leading-none">
+    <div class="xxs:hidden lg:block xxs:text-center xl:text-right font-body tracking-widest text-black leading-none">
       <span id="temperature" class='p-2 lg:mr-12 rounded'></span>
       <br class="bg-red-600 bg-green-600">
     </div>
