--- a/our-story.html
+++ b/our-story.html
@@ -1,67 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141450805-4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141450805-4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-141450805-4');
-</script>
+    gtag('config', 'UA-141450805-4');
+  </script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="resources/css/animate.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="resources/css/app.css" rel="stylesheet">
-   <title>Eyram &amp; Esi || Our Story</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="resources/css/animate.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="resources/css/app.css" rel="stylesheet">
+  <title>Eyram &amp; Esi || Our Story</title>
 </head>
 
 <body class="bg-appteal font-body text-white ">
   <div class="sticky top-0 z-40 ">
     <nav class="flex flex-wrap justify-between bg-appteal xxs:py-2">
       <div class="cursor-pointer xxs:ml-5">
-              <a href="/"><img src="/resources/img/logo.png" alt="logo"></a>
+        <a href="/"><img src="/resources/img/logo.png" alt="logo"></a>
       </div>
       <div class="toggle cursor-pointer block lg:hidden p-2">
-              <svg class="icon fill-current h-8 w-8 block" viewBox="0 0 512 512"><path d="M64 384h384v-42.666H64V384zm0-106.666h384v-42.667H64v42.667zM64 128v42.665h384V128H64z"/></svg>
-              <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512"><path d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"/></svg>
+        <svg class="icon fill-current h-8 w-8 block" viewBox="0 0 512 512">
+          <path d="M64 384h384v-42.666H64V384zm0-106.666h384v-42.667H64v42.667zM64 128v42.665h384V128H64z" /></svg>
+        <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512">
+          <path
+            d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z" />
+          </svg>
       </div>
       <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
-        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-b-2 lg:border-white">
-                Our Story
+        <a href="#"
+          class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-b-2 lg:border-white">
+          Our Story
         </a>
-        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
-                Photos
+        <a href="#"
+          class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+          Photos
         </a>
       </div>
     </nav>
   </div>
-        
-<div>
-  <div class="flex flex-wrap mb-12">
+
+  <div>
+    <div class="flex flex-wrap mb-12">
       <div class="xxs:w-full lg:w-1/2 text-center lg:pt-20 md:h-screen lg:h-auto">
         <h1 class="xxs:text-6xl text-8xl">Our Story</h1>
         <p class="leading-tight text-2xl">&dash;</p>
-        <p class="leading-tight text-appgold xxs:text-sm md:text-xl xxs:px-6 xs:px-12 lg:px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
+        <p class="leading-tight text-appgold xxs:text-sm md:text-xl xxs:px-6 xs:px-12 lg:px-24">"The most important
+          things to do in the world are to get something to eat, something to drink and somebody to love you." - <span
+            class="text-gray-500">Brendan Behan</span></p>
         <p class="leading-tight text-2xl">&dash;</p>
 
-        <p class="leading-tight xxs:text-xl text-2xl text-justify xxs:px-6 lg:pl-20"><img class="pr-3 pb-3 w-64 float-left xxs:block lg:hidden" src="/resources/img/our-story.jpg" alt="our-story">This story began some 7 years ago today. It was a very fine sunny Saturday morning, 
-          Eyram's charity group, BiG, were going for their usual quarterly charity trip to the Volta Region. Into the bus entered this damsel, sweet and glowing; she had so much radiance, her name, as he found out soon enough is Esi .
-          Eyram and Esi barely said a word to each other on the bus because Eyram was being his usual non-talkative self throughout the journey but because the Lord is good, they became very good friends after that trip. Fast forward, life got hectic and Eyram left the country for a bit and they stopped talking like they used to. <br> <br>
-          In the wake of December 25th 2018, Eyram was somewhere very far away and he received a message, it was her, Theodora Maame Esi Torto, wishing Eyram a very Merry Christmas. Eyram was in a very 
-          very bad place and that message restructured every aching muscle on his face and he smiled. They both talked about all and everything, they spoke about how much he had missed her and how she had always been the one for him. 
-          Eyram got back to Ghana on the 30th of January, 2019 and without hesitation the first person he looked for was Esi. He popped the question, that heart wrenching question, "Will you marry me?". She hesitated, his heart skipped so many beats but she smiled and said yes. This was the beginning of a beautiful journey for both of them. <span class="text-gray-500">&dash;cue Bebe Rexha's "If It's Meant To Be"...</span>
+        <p class="leading-tight xxs:text-xl text-2xl text-justify xxs:px-6 lg:pl-20"><img
+            class="pr-3 pb-3 w-64 float-left xxs:block lg:hidden" src="/resources/img/our-story.jpg"
+            alt="our-story">This story began some 7 years ago today. It was a very fine sunny Saturday morning,
+          Eyram's charity group, BiG, were going for their usual quarterly charity trip to the Volta Region. Into the
+          bus entered this damsel, sweet and glowing; she had so much radiance, her name, as he found out soon enough is
+          Esi.
+          Eyram and Esi barely said a word to each other on the bus because Eyram was being his usual non-talkative self
+          throughout the journey but because the Lord is good, they became very good friends after that trip. Fast
+          forward, Eyram has to leave the country for a bit and these two best friends lost communication for a very
+          long time. <br> <br>
+          In the wake of December 25th 2018, something miraculous happened. Eyram received an Instagram message, it was
+          her, Theodora Maame Esi Torto, wishing Eyram a very Merry Christmas. Eyram was in a very
+          very bad place and that message restructured every aching muscle on his face and he smiled. They both talked
+          about all and everything, they spoke about how much he had missed her and how she had always been the one for
+          him.
+          Eyram got back to Ghana on the 30th of January, 2019 and without hesitation the first person he looked for was
+          Esi. He popped the question, that heart wrenching question, "Will you marry me?". She hesitated, his heart
+          skipped so many beats but she smiled and said yes. This was the beginning of a beautiful journey for both of
+          them. <span class="text-gray-500">&dash;cue Bebe Rexha's "If It's Meant To Be"...</span>
         </p>
       </div>
       <div class="xxs:hidden lg:block lg:w-1/2 lg:px-12 lg:pt-56 xl:px-24 xl:pt-32 xl2:px-48">
         <img class="shadow-2xl" src="/resources/img/our-story.jpg" alt="our-story">
       </div>
+    </div>
   </div>
-</div>
 </body>
+
 </html>
