weather removed on index

--- a/our-story.html
+++ b/our-story.html
@@ -34,7 +34,7 @@
         <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512">
           <path
             d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z" />
-          </svg>
+        </svg>
       </div>
       <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
         <a href="#"
@@ -67,7 +67,7 @@
           Esi.
           Eyram and Esi barely said a word to each other on the bus because Eyram was being his usual non-talkative self
           throughout the journey but because the Lord is good, they became very good friends after that trip. Fast
-          forward, Eyram has to leave the country for a bit and these two best friends lost communication for a very
+          forward, Eyram had to leave the country for a bit and these two best friends lost communication for a very
           long time. <br> <br>
           In the wake of December 25th 2018, something miraculous happened. Eyram received an Instagram message, it was
           her, Theodora Maame Esi Torto, wishing Eyram a very Merry Christmas. Eyram was in a very
