--- a/rsvp.html
+++ b/rsvp.html
@@ -53,6 +53,7 @@
               <select
                 class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none"
                 id="grid-number" name="number" type="number" required>
+                <option></option>
                 <option>1</option>
                 <option>2</option>
               </select>
