weather removed on index

--- a/rsvp.html
+++ b/rsvp.html
@@ -54,6 +54,7 @@
                 class="appearance-none bg-transparent border-b border-appgold w-full leading-tight focus:outline-none"
                 id="grid-number" name="number" type="number" required>
                 <option></option>
+                <option>0</option>
                 <option>1</option>
                 <option>2</option>
               </select>
