--- a/our-story.html
+++ b/our-story.html
@@ -62,7 +62,7 @@
         <p class="leading-tight xxs:text-xl text-2xl text-justify xxs:px-6 lg:pl-20"><img
             class="pr-3 pb-3 w-64 float-left xxs:block lg:hidden" src="/resources/img/our-story.jpg"
             alt="our-story">This story began some 7 years ago today. It was a very fine sunny Saturday morning,
-          Eyram's charity group, BiG, were going for their usual quarterly charity trip to the Volta Region. Into the
+          Eyram's charity group, BiG, was going for their usual quarterly charity trip to the Volta Region. Into the
           bus entered this damsel, sweet and glowing; she had so much radiance, her name, as he found out soon enough is
           Esi.
           Eyram and Esi barely said a word to each other on the bus because Eyram was being his usual non-talkative self
