--- a/index.html
+++ b/index.html
@@ -2571,7 +2571,7 @@
     </div>
   </section>
 
-  <section id="landing" class="bg-appteal text-white border-double border-8 border-appgold pb-24 hidden">
+  <section id="landing" class="bg-appteal text-white border-double border-8 border-appgold pb-24 h-screen hidden">
     <!-- Navigation -->
     <div class="sticky font-body top-0 z-40 text-white">
       <nav class="flex flex-wrap justify-between xxs:py-2">
@@ -2584,7 +2584,7 @@
           <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512">
             <path
               d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z" />
-            </svg>
+          </svg>
         </div>
         <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
           <a href="our-story.html"
